Nova atualização - atualização do CSS

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <div class="logo">
                 <img src="images/logo (3).png" title="Logotipo Trilha de CSS DIO" alt="Logotipo Trilha de CSS DIO">
             </div>
-            <h1>TRILHA DE CSS DA DIO</h1>
+            <h1>Trilha de CSS da DIO</h1>
             <P>A nova trinha de CSS da DIO está disponível. Acesse já e aprenda do zero a como desenvolver sites
                 profissionais.</P>
-            <button>QUERO ME INSCREVER</button>
+            <button>Quero me inscrever</button>
         </div>
     </header>
 
@@ -28,7 +28,7 @@
             <h2>O QUE VOU APRENDER</h2>
             <p>Temos 3 módulos recheados de conteúdos do básico ao avançado para que você aprenda a desenvolver sites
                 profissionais utilizando somente HTML e CSS: sem nenhuma biblioteca ou framework a mais.</p>
-            <div class="module-list">
+            <div class="modules-list">
                 <div class="module">
                     <span>Módulo 1:</span> primeiros passos com CSS
                 </div>
