Finalização do projeto e adição do README

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="./images/dio-logo.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/styles.css">
@@ -55,7 +56,7 @@
 
     <footer>
         <img class="dio-logo" src="images/dio-logo.png" title="Logotipo DIO com o texto make the change" alt="Logotipo DIO com o texto make the change">
-        <p>Acesse dio.me e se cadastre agora</p>
+        <p>Acesse <a>dio.me</a> e se cadastre agora</p>
 
     </footer>
 </body>
